k8s/ingress/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
    - hosts:
        - cu-connex.com
        - www.cu-connex.com
      secretName: cu-connex-com-tls
  rules:
    - host: cu-connex.com 
      http:
          paths:
            - path: /?(.*)
              pathType: Prefix
              backend:
                service:
                  name: client-cluster-ip-srv
                  port:
                    number: 3000
            - path: /api/?(.*)
              pathType: Prefix
              backend:
                service:
                  name: server-cluster-ip-srv
                  port:
                    number: 5000
    - host: www.cu-connex.com 
      http:
          paths:
            - path: /?(.*)
              pathType: Prefix
              backend:
                service:
                  name: client-cluster-ip-srv
                  port:
                    number: 3000
            - path: /api/?(.*)
              pathType: Prefix
              backend:
                service:
                  name: server-cluster-ip-srv
                  port:
                    number: 5000
